--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/icon-144.png" />
     <link
       rel="stylesheet"
-      href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans|Roboto+Slab:700"
+      href="https://fonts.googleapis.com/css?family=Oswald"
     />
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
